--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,7 +33,7 @@ on:
 env:
   AWS_REGION: us-east-1                  # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: docker-sample-nodeapp           # set this to your Amazon ECR repository name
-  ECS_SERVICE: docker-nodeapp-service                 # set this to your Amazon ECS service name
+  ECS_SERVICE: docker-sample-nodeapp-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: nodeapp                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: docker-sample-nodeapp-task-definition  # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
