--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: docker-sample-nodeapp           # set this to your Amazon ECR repository name
   ECS_SERVICE: docker-sample-nodeapp-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: nodeapp                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: docker-sample-nodeapp-task-definition  # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: docker-sample-nodeapp-task-definition.json  # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: docker-nodeapp          # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
